    * Fix libsmbclient bug with Konqueror and NetApp filers that 
      need a leading / in OpenAndX calls. 
    * Added showacls toggle in the smbclient code.
    * Add a suffix to the pidfile's program name if this is a process
      with a non-default configuration file name.
    * Fix protection from invalid struct tm values.
    * BUG 4187: Possible crash in signing on/off code.


o   Timur Bakeyev <timur@com.bat.ru>
    * BUG 3856: Set the nss soname version on FreeBSD.
    * BUG 4109: Fix bug causing smbd to turn off winbindd and 
      fail to disable the _NO_WINBIND environment.
    * BUG 3868: Prevent --with-aio-support from trimming the 
      $LIBS variable in configure.in.


o   Dmitry Butskoy <dmitry@butskoy.name>
    * BUG 4075: Allow smbd to use winbindd to lookup uids/gids 
      outside the idmap range if 'winbind trusted domains 
      only = yes'.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix primary group lookup failures.  Use the Get_Pwnam_alloc() 
      call to ensure it finds the Unix user first.
    * Only grant privs to Administrators if privileges are enabled 
      to avoid bogus error messages in the logs.


o   Alex Deiter <tiamat@komi.mts.ru>
    * BUG 3524: Fix for quota support on Solaris.


o   Guenther Deschner <gd@samba.org>
    * Close socket when the CLDAP request has failed.
    * Memory leak fixes in the libads/ldap.c code.
    * Printer publishing fixes for "net ads".
    * Fix error code returns in the CLDAP client code.
    * Do not anonymously query for AD schema items in winbindd.
    * Protect against storing null-sids in the winbind cache.
    * Fallback to non-paging LDAP searches for anonymous bound 
      connections.
    * More workarounds when nscd.
    * Fix error code typoe in the GetDcName() netlogon call  
      (including two new error codes).
    * Fix valgrind warnings in pam_winbind
    * Add two missing refresh_sequence_number calls where they are 